# Introduction-to-Artificial-Intelligence

./: pyproject.toml
lab1/: lab_1.ipynb  lab_1.py
lab2/: lab_2.ipynb  lab_2.py
lab3/: lab_3.ipynb
