[tool.poetry]
name = "introduction-to-artificial-inteligence"
version = "0.1.0"
description = ""
authors = ["WojtekWietrzny <wietrzny@student.agh.edu.pl>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
jupyterlab = "^4.2.5"
jupyterlab-execute-time = "^3.2.0"
jupytext = "^1.16.4"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
missingno = "^0.5.2"
imbalanced-learn = "^0.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
